...

    <ImageButton
        android:id="@+id/btnConfirmAddHabit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:id="@+id/etHabitTitle"
                android:hint="@string/etHabitTitleHint"
                app:layout_constraintBottom_toTopOf="@+id/etHabitReason"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
...
                    android:layout_marginVertical="20dp"
                    android:minWidth="65dp"
                    android:id="@+id/etDateToStartYear"
                    android:hint="Year"
                    app:layout_constraintBottom_toTopOf="@+id/etHabitReason"
...
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="20dp"
                    android:id="@+id/etDateToStartMonth"
                    android:hint="@string/month"
                    app:layout_constraintBottom_toTopOf="@+id/etHabitReason"
...
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="20dp"
                    android:id="@+id/etDateToStartDay"
                    android:hint="@string/day"
                    app:layout_constraintBottom_toTopOf="@+id/etHabitReason"
...

                <com.google.android.material.chip.Chip
                    android:id="@+id/cMonday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
...

                <com.google.android.material.chip.Chip
                    android:id="@+id/cTuesday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
...

                <com.google.android.material.chip.Chip
                    android:id="@+id/cWednesday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
...

                <com.google.android.material.chip.Chip
                    android:id="@+id/cThursday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
...

                <com.google.android.material.chip.Chip
                    android:id="@+id/cTFriday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
...

                <com.google.android.material.chip.Chip
                    android:id="@+id/cSaturday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
...

                <com.google.android.material.chip.Chip
                    android:id="@+id/cSunday"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
...

            <ToggleButton
                android:id="@+id/toggleIsPublic"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
...
