<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021-2022. Group 43 CMPUT301 F2021
  ~ All rights reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btnConfirmEditEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@color/white"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/ic_baseline_done_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBackEditEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@color/white"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/svAddEvent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="70dp"
        tools:layout_editor_absoluteY="65dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etEditEventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Event Title"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/etEditEventComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/tvHabitEventComment"
                android:maxLength="20"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/tvEditEventLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/tvHabitEventLocation"
                android:textSize="20sp" />

            <CheckBox android:id="@+id/cbEditEventDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="Done"
                android:enabled="true"/>

            <LinearLayout
                android:id="@+id/constraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="10dp"
                tools:layout_editor_absoluteX="0dp">

                <Button
                    android:id="@+id/btnSelectEditEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_new_image"
                    android:layout_marginHorizontal="5dp"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btnChangeLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_location"
                    android:layout_marginHorizontal="5dp"
                    android:textSize="10sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivEditEventPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>