<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Version 1.1
  ~ Copyright (c) 2021-2022. Group 43 CMPUT301 F2021
  ~ All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/habit"
        android:title="Habits"
        android:icon="@drawable/ic_home_foreground"/>
    <item
        android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/ic_person_foreground"/>
    <item
        android:id="@+id/friends"
        android:title="Friends"
        android:icon="@drawable/ic_friends"/>
</menu>